--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "multer": "^1.4.4"
   },
   "scripts": {
-    "nodemon": "npx nodemon server.js"
+    "start": "npx nodemon server.js"
   }
 }
